
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct net_tuple {int dst; int src; } ;
struct TYPE_4__ {int s_addr; } ;
struct TYPE_3__ {int s_addr; } ;
struct ip {int ip_hl; int ip_v; int ip_ttl; TYPE_2__ ip_dst; TYPE_1__ ip_src; int ip_p; int ip_len; } ;
typedef int ip ;


 int IPPROTO_TCP ;
 scalar_t__ IP_SIZE ;
 scalar_t__ TCP_SIZE ;
 int htons (scalar_t__) ;
 int memcpy (unsigned char*,struct ip*,int) ;
 int memset (struct ip*,int ,int) ;

void
add_iphdr(unsigned char *pkt, struct net_tuple *nt)
{
  struct ip ip;

  memset(&ip, 0, 20);
  ip.ip_hl = sizeof(ip) >> 2;
  ip.ip_v = 4;

  ip.ip_len = htons(IP_SIZE + TCP_SIZE);


  ip.ip_ttl = 0xff;
  ip.ip_p = IPPROTO_TCP;

  ip.ip_src.s_addr = nt->src;
  ip.ip_dst.s_addr = nt->dst;
  memcpy(pkt, &ip, sizeof(ip));
}
