; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/openbsd/dos/extr_20271.c_add_iphdr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/openbsd/dos/extr_20271.c_add_iphdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_tuple = type { i32, i32 }
%struct.ip = type { i32, i32, i32, %struct.TYPE_4__, %struct.TYPE_3__, i32, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@IP_SIZE = common dso_local global i64 0, align 8
@TCP_SIZE = common dso_local global i64 0, align 8
@IPPROTO_TCP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_iphdr(i8* %0, %struct.net_tuple* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.net_tuple*, align 8
  %5 = alloca %struct.ip, align 4
  store i8* %0, i8** %3, align 8
  store %struct.net_tuple* %1, %struct.net_tuple** %4, align 8
  %6 = call i32 @memset(%struct.ip* %5, i32 0, i32 20)
  %7 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 0
  store i32 7, i32* %7, align 4
  %8 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 1
  store i32 4, i32* %8, align 4
  %9 = load i64, i64* @IP_SIZE, align 8
  %10 = load i64, i64* @TCP_SIZE, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @htons(i64 %11)
  %13 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 6
  store i32 %12, i32* %13, align 4
  %14 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 2
  store i32 255, i32* %14, align 4
  %15 = load i32, i32* @IPPROTO_TCP, align 4
  %16 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 5
  store i32 %15, i32* %16, align 4
  %17 = load %struct.net_tuple*, %struct.net_tuple** %4, align 8
  %18 = getelementptr inbounds %struct.net_tuple, %struct.net_tuple* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 4
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load %struct.net_tuple*, %struct.net_tuple** %4, align 8
  %23 = getelementptr inbounds %struct.net_tuple, %struct.net_tuple* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds %struct.ip, %struct.ip* %5, i32 0, i32 3
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @memcpy(i8* %27, %struct.ip* %5, i32 28)
  ret void
}

declare dso_local i32 @memset(%struct.ip*, i32, i32) #1

declare dso_local i32 @htons(i64) #1

declare dso_local i32 @memcpy(i8*, %struct.ip*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
